overflow fixed!

--- a/Trial/trial.css
+++ b/Trial/trial.css
@@ -1,3 +1,8 @@
+
+* {
+    box-sizing: border-box; 
+}
+
 body {
   	color: #444135;
   	margin: 0;
@@ -108,9 +113,6 @@ header {
 	margin-right: 20px;
 }
 
-* {
-    box-sizing: border-box; 
-}
 
 
 /* ======= Page Style ======= */
@@ -127,15 +129,19 @@ header,
 }
 
 .page {
-  padding: 110px 0px 0px;
+  padding: 50px 0px 0px;
   background: #fff;
-  /*height: 2000px;*/
   text-align: center;
-  z-index: 140;
+  border: 1px dashed red;
+  position: relative;
 }
 
 #cal {
 	height: 410px;
+}
+
+.box1 {
+	overflow: auto;
 }
 
 .col-md-12 {
@@ -151,32 +157,17 @@ header,
 	font-family: Nevice;
 }
 
+
+/*
 .some-space {
 	height: 50px;
 }
 
-.well {
-	margin-top: 30px;
-}
-
 .box2 {
 	width: 100%;
-	height: 500px;
-	background: black;
+	height: 400px;
 }
 
-.box3 {
-	width: 100%;
-	height: 300px;
-}
-
-
-
-
-
-
-
-/*
 
 #top-page {
   width: 100%;
